--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-loading-skeleton": "^3.5.0",
     "react-phone-number-input": "^3.4.8",
     "tailwind-merge": "^2.5.4",
     "tailwind-scrollbar": "^3.1.0",
